<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <!--<com.amazon.device.ads.AdLayout-->
    <!--android:id="@+id/adview"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_height="wrap_content"/>-->
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">


            <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"
                    android:layout_gravity="center_horizontal|bottom"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/version_text"
                      android:layout_gravity="right"
                      android:text="version: v 1.1.0"/>
            <LinearLayout android:layout_width="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="right"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/send_text_only_text"
                          android:text="@string/send_wifi_only"
                          android:paddingBottom="20dp"
                />
                <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:id="@+id/send_wifi_switch"/>

            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="right"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/require_comment_text"
                          android:text="@string/require_comment_text"
                          android:paddingBottom="20dp"
                />

                <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:id="@+id/require_comment_switch"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="right"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/save_original_text"
                          android:text="@string/save_original_text"
                          android:paddingBottom="20dp"
                />

                <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:id="@+id/save_original_switch"/>
            </LinearLayout>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="26sp"
                      android:textStyle="bold"
                      android:visibility="gone"
                      tools:text="test email stuff"
                      android:paddingBottom="20dp"
                      android:id="@+id/current_emails"/>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:layout_marginBottom="30dp"
                  android:background="@android:color/black"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:id="@+id/saved_list_container"
                          android:layout_marginBottom="20dp">
            </LinearLayout>

            <com.android.ex.chips.RecipientEditTextView android:layout_width="match_parent"
                                                        android:fitsSystemWindows="true"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/email_retv"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                <Button android:layout_width="wrap_content"
                        android:padding="20dp"

                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/save_btn"/>
                <Button android:layout_width="wrap_content"
                        android:padding="20dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/save_list_btn"
                        android:text="Save List"/>
            </LinearLayout>

            <!--<ListView android:id="@+id/list"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="match_parent" />-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>